# Web8NOSQL

./: first_task.py  jsonup.py  pyproject.toml
second_task/: consumer_Mail.py  consumer_sms.py  models.py  producer.py  text.txt
